links fixed & grid gap

--- a/blocks/place/__like-button/place__like-button.css
+++ b/blocks/place/__like-button/place__like-button.css
@@ -4,7 +4,7 @@
   transition: opacity 0.3 ease;
   background-color: transparent;
   border: none;
-  background-image: url(/images/like-button.svg);
+  background-image: url(../../../images/like-button.svg);
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -12,13 +12,13 @@
   cursor: pointer;
   opacity: 0.5;
 }
-.place__like-button-active {
+.place__like-button.active {
   width: 22px;
   height: 19px;
   transition: opacity 0.3 ease;
   background-color: transparent;
   border: none;
-  background-image: url(/images/like-button-active.svg);
+  background-image: url(../../../images/like-button-active.svg);
   background-repeat: no-repeat;
   background-size: cover;
 }
