--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -20,5 +20,6 @@
     padding: 0 19px 0 19px;
     margin: 0 auto;
     padding-top: 30px;
+    gap: 20px;
   }
 }
